Revision history for Perl extension FSA::Rules.

0.32

0.31  2012-05-02T16:04:15Z
      - Added `state_params` parameter to `new()`. The specified hash
        reference will be passed as a list to the `state_class` constructor.
        Patch from Chia-liang Kao.

0.30  2012-03-06T05:03:37Z
      - Fixed broken rt.cpan.org email address.
      - Fixed failed tests in `t/graph.t` on Windows.

0.29  2011-06-20T04:55:18
      - Fixed the required Perl version number so that it can be understood
        by older Perls (e.g., 5.5). Reported by Slaven Rezic via cpan-testers.
      - Moved repostitory to [GitHub](https://github.com/theory/fsa-rules/).
      - Switched to a "traditional" `Makefile.PL`.
      - Require Test::Pod 1.41 to run the Pod tests.

0.28  2008-05-22T03:05:24
      - Added a link to the Subversion repository.
      - Updated copyright.
      - Removed Pod::Spelling from `Build.PL`, since the spelling test isn't
        included in the distribution.

0.27  2008-05-02T20:08:40
      - Corrected a number of typos in the POD.
      - Added the "configure_requires" parameter to Build.PL.
      - Added Test::Spelling to the "recommends" parameter to Build.PL and
        updated the test to skip if Test::Spelling is not installed.
      - The output of `stacktrace` now has has keys sorted by
        `$Data::Dumper::Sortkeys = 1`. Not sure how or when this was turned
        off.
      - Added B::Deparse 0.61 to the "recommends" parameter to Build.PL, as
        older versions can cause Storable to croak, since they don't support
        deparsing code references. This fixes things for Perl 5.6.2, where
        serialization is not supported.
      - Requiring Perl 5.6.2 or greater.

0.26  2006-08-29T17:44:37
      - The message() method now takes a list of arguments instead of a single
        scalar. It will concatenate them all together.
      - Fixed bug in strict mode where the machine entered the next state