@@ -4,7 +4,10 @@ my $build = Module::Build->new(
     module_name        => 'FSA::Rules',
     license            => 'perl',
     create_makefile_pl => 'traditional',
-    requires           => { perl            => 5.006_002 },
+    requires           => {
+        perl         => 5.006_002,
+        Scalar::Util => '1.01',
+    },
     configure_requires => { 'Module::Build' => '0.2701'  },
     build_requires     => {
         'Module::Build' => '0.2701',
